bind gestures to virtual controller

--- a/KinectBinds/KinectBinds/KinectBinds.csproj
+++ b/KinectBinds/KinectBinds/KinectBinds.csproj
@@ -63,6 +63,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Display.cs" />
+    <Compile Include="Gestures.cs" />
     <Compile Include="Win32.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
